@@ -17,6 +17,7 @@ GENERAL:
 * remove deprecated utilities scripts
 * update util actions/filter files
 * class TAG - improve PHPdoc - methods/variable declaration
+* general - use 'XML_PARSE_BIG_LINES' on all classes where XMLfile is load
 
 
 2.0.73 (20230224)
